@@ -17,19 +17,25 @@
 package com.hazelcast.client.atomiclong;
 
 import com.hazelcast.client.HazelcastClient;
-import com.hazelcast.core.IFunction;
 import com.hazelcast.core.Hazelcast;
 import com.hazelcast.core.HazelcastInstance;
 import com.hazelcast.core.IAtomicLong;
+import com.hazelcast.core.IFunction;
 import com.hazelcast.test.HazelcastSerialClassRunner;
 import com.hazelcast.test.annotation.QuickTest;
-import org.junit.*;
+import org.junit.After;
+import org.junit.AfterClass;
+import org.junit.Before;
+import org.junit.BeforeClass;
+import org.junit.Test;
 import org.junit.experimental.categories.Category;
 import org.junit.runner.RunWith;
 
 import java.io.IOException;
 
-import static org.junit.Assert.*;
+import static org.junit.Assert.assertEquals;
+import static org.junit.Assert.assertFalse;
+import static org.junit.Assert.assertTrue;
 import static org.junit.Assert.fail;
 
 /**
@@ -39,185 +45,159 @@ import static org.junit.Assert.fail;
 @Category(QuickTest.class)
 public class ClientAtomicLongTest {
 
-    static final String name = "test1";
-    static HazelcastInstance client;
-    static HazelcastInstance server;
-    static IAtomicLong l;
+    private static final String name = "atomicLongTest";
+
+    private static IAtomicLong counter;
 
     @BeforeClass
-    public static void init(){
-        server = Hazelcast.newHazelcastInstance();
-        client = HazelcastClient.newHazelcastClient();
-        l = client.getAtomicLong(name);
+    public static void beforeClass() {
+        Hazelcast.newHazelcastInstance();
+        HazelcastInstance client = HazelcastClient.newHazelcastClient();
+
+        counter = client.getAtomicLong(name);
     }
 
     @AfterClass
-    public static void destroy() {
-        client.shutdown();
+    public static void afterClass() {
+        HazelcastClient.shutdownAll();
         Hazelcast.shutdownAll();
     }
 
     @Before
     @After
-    public void clear() throws IOException {
-        l.set(0);
+    public void reset() throws IOException {
+        counter.set(0);
     }
 
     @Test
     public void test() throws Exception {
-
-
-        assertEquals(0, l.getAndAdd(2));
-        assertEquals(2, l.get());
-        l.set(5);
-        assertEquals(5, l.get());
-        assertEquals(8, l.addAndGet(3));
-        assertFalse(l.compareAndSet(7, 4));
-        assertEquals(8, l.get());
-        assertTrue(l.compareAndSet(8, 4));
-        assertEquals(4, l.get());
-        assertEquals(3, l.decrementAndGet());
-        assertEquals(3, l.getAndIncrement());
-        assertEquals(4, l.getAndSet(9));
-        assertEquals(10, l.incrementAndGet());
-
+        assertEquals(0, counter.getAndAdd(2));
+        assertEquals(2, counter.get());
+        counter.set(5);
+        assertEquals(5, counter.get());
+        assertEquals(8, counter.addAndGet(3));
+        assertFalse(counter.compareAndSet(7, 4));
+        assertEquals(8, counter.get());
+        assertTrue(counter.compareAndSet(8, 4));
+        assertEquals(4, counter.get());
+        assertEquals(3, counter.decrementAndGet());
+        assertEquals(3, counter.getAndIncrement());
+        assertEquals(4, counter.getAndSet(9));
+        assertEquals(10, counter.incrementAndGet());
     }
 
     @Test(expected = IllegalArgumentException.class)
     public void apply_whenCalledWithNullFunction() {
-        IAtomicLong ref = client.getAtomicLong("apply_whenCalledWithNullFunction");
-
-        ref.apply(null);
+        counter.apply(null);
     }
 
     @Test
     public void apply() {
-        IAtomicLong ref = client.getAtomicLong("apply");
-
-        assertEquals(new Long(1), ref.apply(new AddOneFunction()));
-        assertEquals(0, ref.get());
+        assertEquals(Long.valueOf(1), counter.apply(new AddOneFunction()));
+        assertEquals(0, counter.get());
     }
 
     @Test
     public void apply_whenException() {
-        IAtomicLong ref = client.getAtomicLong("apply_whenException");
-        ref.set(1);
+        counter.set(1);
         try {
-            ref.apply(new FailingFunction());
+            counter.apply(new FailingFunction());
             fail();
-        } catch (WoohaaException expected) {
+        } catch (ClientAtomicLongTestRuntimeException ignored) {
         }
 
-        assertEquals(1, ref.get());
+        assertEquals(1, counter.get());
     }
 
     @Test(expected = IllegalArgumentException.class)
     public void alter_whenCalledWithNullFunction() {
-        IAtomicLong ref = client.getAtomicLong("alter_whenCalledWithNullFunction");
-
-        ref.alter(null);
+        counter.alter(null);
     }
 
     @Test
     public void alter_whenException() {
-        IAtomicLong ref = client.getAtomicLong("alter_whenException");
-        ref.set(10);
-
+        counter.set(10);
         try {
-            ref.alter(new FailingFunction());
+            counter.alter(new FailingFunction());
             fail();
-        } catch (WoohaaException expected) {
+        } catch (ClientAtomicLongTestRuntimeException ignored) {
         }
 
-        assertEquals(10, ref.get());
+        assertEquals(10, counter.get());
     }
 
     @Test
     public void alter() {
-        IAtomicLong ref = client.getAtomicLong("alter");
+        counter.set(10);
+        counter.alter(new AddOneFunction());
 
-        ref.set(10);
-        ref.alter(new AddOneFunction());
-        assertEquals(11, ref.get());
-
+        assertEquals(11, counter.get());
     }
 
     @Test(expected = IllegalArgumentException.class)
     public void alterAndGet_whenCalledWithNullFunction() {
-        IAtomicLong ref = client.getAtomicLong("alterAndGet_whenCalledWithNullFunction");
-
-        ref.alterAndGet(null);
+        counter.alterAndGet(null);
     }
 
     @Test
     public void alterAndGet_whenException() {
-        IAtomicLong ref = client.getAtomicLong("alterAndGet_whenException");
-        ref.set(10);
-
+        counter.set(10);
         try {
-            ref.alterAndGet(new FailingFunction());
+            counter.alterAndGet(new FailingFunction());
             fail();
-        } catch (WoohaaException expected) {
+        } catch (ClientAtomicLongTestRuntimeException ignored) {
         }
 
-        assertEquals(10, ref.get());
+        assertEquals(10, counter.get());
     }
 
     @Test
     public void alterAndGet() {
-        IAtomicLong ref = client.getAtomicLong("alterAndGet");
+        counter.set(10);
 
-        ref.set(10);
-        assertEquals(11, ref.alterAndGet(new AddOneFunction()));
-        assertEquals(11, ref.get());
+        assertEquals(11, counter.alterAndGet(new AddOneFunction()));
+        assertEquals(11, counter.get());
     }
 
     @Test(expected = IllegalArgumentException.class)
     public void getAndAlter_whenCalledWithNullFunction() {
-        IAtomicLong ref = client.getAtomicLong("getAndAlter_whenCalledWithNullFunction");
-
-        ref.getAndAlter(null);
+        counter.getAndAlter(null);
     }
 
     @Test
     public void getAndAlter_whenException() {
-        IAtomicLong ref = client.getAtomicLong("getAndAlter_whenException");
-        ref.set(10);
-
+        counter.set(10);
         try {
-            ref.getAndAlter(new FailingFunction());
+            counter.getAndAlter(new FailingFunction());
             fail();
-        } catch (WoohaaException expected) {
+        } catch (ClientAtomicLongTestRuntimeException ignored) {
         }
 
-        assertEquals(10, ref.get());
+        assertEquals(10, counter.get());
     }
 
     @Test
     public void getAndAlter() {
-        IAtomicLong ref = client.getAtomicLong("getAndAlter");
+        counter.set(10);
 
-        ref.set(10);
-        assertEquals(10, ref.getAndAlter(new AddOneFunction()));
-        assertEquals(11, ref.get());
+        assertEquals(10, counter.getAndAlter(new AddOneFunction()));
+        assertEquals(11, counter.get());
     }
 
     private static class AddOneFunction implements IFunction<Long, Long> {
         @Override
         public Long apply(Long input) {
-            return input+1;
+            return input + 1;
         }
     }
-
 
     private static class FailingFunction implements IFunction<Long, Long> {
         @Override
         public Long apply(Long input) {
-            throw new WoohaaException();
+            throw new ClientAtomicLongTestRuntimeException();
         }
     }
 
-    private static class WoohaaException extends RuntimeException {
-
+    private static class ClientAtomicLongTestRuntimeException extends RuntimeException {
     }
 }
